tests/results/syntax_errors/missing_close_par_2.own
compile::stdout 0

compile::stderr 4
tests/inputs/syntax_errors/missing_close_par_2.own:5:1:[1;31merror[0;39m:expected expression 
     4 |     num = 8*(9 +
     5 | }
       | ^

compile::return_code 1

